# algorithms-1

./: CMakeLists.txt  out  text.txt
tasks/	Двумерная динамика. Динамика по подстрокам/: Движение по полосам.py  Космический мусорщик.py  Распил брусьев.py
tasks/Алгоритмы и их сложность/Даты/: solution.py
tasks/Алгоритмы и их сложность/Кольцевая линия метро/: solution.py
tasks/Алгоритмы и их сложность/Параллелограмм/: solution.py
tasks/Алгоритмы и их сложность/Строительство/: solution.py
tasks/Алгоритмы и их сложность/детали/: solution.py
tasks/Два указателя. Сортировка событий/: Город Чу.py  Кассы.py  Максимальная сумма.py  Наблюдение за студентами.py  Подстрока.py  Робот.py  Таможня.py  Точки и отрезки.py  Туризм.py
tasks/Динамическое программирование. Задача о рюкзаке. Жадные алгоритмы/: Дизайнерский лифт.py  Интернет.py  Рюкзак наибольший вес.py  каждому по компьютеру.py  квадрат из 0 и 1.py  наибольшая стоимость с восстановлением ответа.py  рюкзак наибольшая стоимость.py
tasks/Динамическое программирование. Классические задачи/: Калькулятор.py  Кузнечик.py  НВП с восстановлением ответа.py  НОП с восстановлениям ответа.py  ПДД.py  Три единицы подряд.py  Ход конём - 2.py  Ход конём.py
tasks/Сортировка подсчетом и поразрядная. Хеш-таблицы/: Гистограмма.py  Головоломка.py  Клавиатура.py  Палиндром.py  Поразрядная сортировка.py  Расшифровка письменности Майя.py  Фибоначчи возвращается.py  Форум.py  Числа.py
tasks/Хеши для строк/: z фукнция.py  А функция от строчки.py  Кубики в зеркале.py  Подпалиндромы.py  взлом хэш функции.py  сравнение строк.py
(+26 files in other folders)
